force-app/main/default/objects/maps__ButtonSet__c/maps__ButtonSet__c.object-meta.xml
<CustomObject>
    <label>Maps Button Set</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Button Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>