force-app/main/default/objects/maps__ButtonSet__c/fields/maps__CustomAddressLayout__c.field-meta.xml
<CustomField>
    <fullName>maps__CustomAddressLayout__c</fullName>
    <label>Custom Address Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>