force-app/main/default/objects/maps__ButtonSet__c/fields/maps__MassActionLayout__c.field-meta.xml
<CustomField>
    <fullName>maps__MassActionLayout__c</fullName>
    <label>Mass Action Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>