force-app/main/default/objects/maps__ButtonSet__c/fields/maps__MyPositionLayout__c.field-meta.xml
<CustomField>
    <fullName>maps__MyPositionLayout__c</fullName>
    <label>My Position Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>