force-app/main/default/objects/maps__ButtonSet__c/fields/maps__POILayout__c.field-meta.xml
<CustomField>
    <fullName>maps__POILayout__c</fullName>
    <label>POI Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>