force-app/main/default/objects/maps__ButtonSet__c/fields/maps__TooltipLayout__c.field-meta.xml
<CustomField>
    <fullName>maps__TooltipLayout__c</fullName>
    <label>Tooltip Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>